# vector_search_path

./: README.md  docker-compose.yml  tmdb_crawler.py
embedding_service/: Cargo.toml
embedding_service/data/: books.json
embedding_service/src/: main.rs  model.rs
embedding_service/src/api/: mod.rs
index_service/: Dockerfile  build.gradle.kts  settings.gradle.kts
index_service/api/: build.gradle.kts
index_service/api/src/main/kotlin/dev/sotoestevez/index/: HelloService.kt
index_service/api/src/main/kotlin/dev/sotoestevez/index/dto/: MovieDoc.kt
index_service/api/src/main/kotlin/dev/sotoestevez/index/response/: docs.kt
index_service/api/src/test/kotlin/dev/sotoestevez/index/: IndexApplicationTests.kt
index_service/service/: build.gradle.kts
index_service/service/src/main/kotlin/dev/sotoestevez/index/: IndexApplication.kt
index_service/service/src/main/kotlin/dev/sotoestevez/index/config/: KafkaConfig.kt
index_service/service/src/main/kotlin/dev/sotoestevez/index/rest/: DocsController.kt  HelloController.kt
index_service/service/src/main/kotlin/dev/sotoestevez/index/service/: KafkaMovieQueueService.kt  QueueService.kt
index_service/service/src/main/resources/: application.yml
vectorize_service/: Cargo.toml  Dockerfile
vectorize_service/src/: main.rs  model.rs
vectorize_service/src/api/: error.rs  text.rs
