[package]
name = "vectorize_service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
axum = "0.6.18"
rust-bert = "0.20.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["full"] }
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
typenum = "1.16.0"
